src/test/ui/hr-subtype/placeholder-pattern-fail.stderr
error[E0308]: mismatched types
  --> $DIR/placeholder-pattern-fail.rs:9:47
   |
LL |     let _: for<'a, 'b> fn(Inv<'a>, Inv<'b>) = sub;
   |                                               ^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a, 'b> fn(Inv<'a>, Inv<'b>)`
              found fn pointer `for<'a> fn(Inv<'a>, Inv<'a>)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
